2015-04-01 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.2.1

2015-02-15 Erwin Waterlander <waterlan@xs4all.nl>
	* test/misc.t: Fix test for -f option.
	* test/chk_loc.sh: New script to test if locale is supported.
	* test/Makefile: Skip gb18030 test if zh_CN.gb18030 locale is not supported.
	* man/man1/dos2unix.pod: Update section GB18030 and option -m.

2015-02-11 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.2

2015-01-15 Armin Müller
	* common.c,dos2unix.c,unix2dos.c: Use %u in format strings for
	  unsigned ints.
	* common.c: Fixed typo in if condition in write_bom().

2015-01-15 Erwin Waterlander <waterlan@xs4all.nl>
	* test/gb18030.t: Added more tests.

2015-01-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Fixed wrong encoded titles in HTML manuals when Perl 5.18
	  pod2html was used. Thanks to Tom Christiansen.

2015-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, man/man1/Makefile: add option --no-wrap to xgettext and
	  msgmerge. Translation Project standard is not to wrap.

2015-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Point to gettext manual html nodes instead of
	  the full gettext manual.

2014-12-31 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Cleanup man page. Thanks to Benno Schulenberg.

2014-12-30 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Changed some messages for better translations.

2014-12-26 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix. On Windows when option -gb is used, option -m must
	  add GB18030 BOM i.s.o. UTF-8 BOM.
	* test/gb18030.t: Make tests working for Windows version.

2014-12-24 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix. In a GB18030 locale, option -m must add GB18030 BOM
	  i.s.o. UTF-8 BOM.
	* test/gb18030.t: New tests for GB18030.

2014-12-23 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Update section GB18030.

2014-12-08 Erwin Waterlander <waterlan@xs4all.nl>