@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 7.2.1
-DOS2UNIX_VERSION_SHORT = 721
-DOS2UNIX_DATE = 2015-04-01
+DOS2UNIX_VERSION = 7.2.2-beta1
+DOS2UNIX_VERSION_SHORT = 722b1
+DOS2UNIX_DATE = 2015-05-03
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
