@@ -1,3 +1,10 @@
+2015-05-03 Erwin Waterlander <waterlan@xs4all.nl>
+	* test/Makefile: Disable GB18030 tests for FreeBSD. Tests which convert
+	  UTF-16 with surrogate pairs to GB18030 fail. Seen on FreeBSD 10.1.
+	  Issue in wcstombs()?
+	* common.h: Removed define of _XOPEN_SOURCE. When _XOPEN_SOURCE is
+	  defined, the function lstat() is not found on FreeBSD 10.1.
+
 2015-04-01 Erwin Waterlander <waterlan@xs4all.nl>
 	* Version 7.2.1
 
